--- a/src/components/HabitCardTracker/HabitCardTrackerComponent.module.css
+++ b/src/components/HabitCardTracker/HabitCardTrackerComponent.module.css
@@ -1,7 +1,4 @@
 
-
-
-
 .habit-card{
     width           : 100%;
     height          : 240px;
@@ -63,6 +60,7 @@
     display         : flex;
     flex-wrap       : wrap;
     align-content   : flex-start;
+		overflow				: hidden;
     
 }
 
