--- a/src/views/NewHabit/NewHabit.module.css
+++ b/src/views/NewHabit/NewHabit.module.css
@@ -1,11 +1,15 @@
+.habit-alert{
+	  position: fixed;
+    z-index: 9;
+    right: 0;
+}
 
-
-
-
-
+.habit-input-title{
+	color:white;
+	margin-top: 10px;
+}
 
 .habitContainer{
-
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -16,7 +20,6 @@
     height: 50px;
     border-radius: 10px;
     margin-bottom: 10px;
-    background-color: red;
     background-color: #1c1c1e;
     display: flex;
     flex-direction: column;
@@ -27,15 +30,12 @@
 }
 
 .habitContainer__btnHabit > img{
-
     width: 100%;
-
 } 
 
 .habit-color-container{
     width: 100%;
     height: 50%;
-
     display: flex;
     justify-content: space-between;
 }
@@ -51,6 +51,7 @@
     margin-bottom: 10px;
     border-radius: 25px;
 }
+
 .card__left-side{
     margin-right: 10px;
 }
